# pylibre

./: .gitignore  README.md  credentials.template.json  pyproject.toml  setup.py
accounts/: accounts.json
config/: example.config.yaml  manager.json
examples/: dex-cancel-all-orders.py  dex-examples.py  examples.py  placebid.py  run_random_walk.py  strategy_example.py
scripts/: cancel_all_orders.py  fetch_prices.py  package.py  run_manager.py  run_single_strategy.py  run_strategy.py  run_trading.py  test_client.py
shared_data/: btcusdt_price.json  librebtc_price.json
src/pylibre/: __init__.py  cli.py  client.py  dex.py
src/pylibre/manager/: __init__.py  account_manager.py  config_manager.py  strategy_manager.py  trading_manager.py
src/pylibre/price_feed/: __init__.py  base.py  binance_source.py  factory.py  fixed_source.py
src/pylibre/strategies/: __init__.py  market_rate.py  order_book_maker.py  orderbook_filler.py  orderbook_maker.py  orderbookfiller.py  random_walk.py
src/pylibre/strategies/templates/: base_strategy.py
src/pylibre/utils/: binance_api.py  logger.py  price_feed.py  shared_data.py
tests/: test_client.py  test_config_manager.py  test_manager.py  test_strategies.py
