[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylibre"
version = "0.1.0"
description = "A Python client for interacting with the Libre blockchain"
readme = "README.md"
authors = [
    {name = "Benobi", email = "python@benobi.one"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "python-dotenv",
    "requests",
]

[project.urls]
Homepage = "https://github.com/bensig/pylibre"
Repository = "https://github.com/bensig/pylibre.git"

[project.scripts]
pylibre = "pylibre.cli:main"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3
